[gd_scene load_steps=5 format=3 uid="uid://b2c2deu52in5e"]

[ext_resource type="Theme" uid="uid://8783p7rjqna0" path="res://assets/buttons/themes/app_theme.tres" id="1_mka1q"]
[ext_resource type="Script" path="res://scripts/menu/pause_camera_button.gd" id="2_hqvul"]
[ext_resource type="Texture2D" uid="uid://bpo3u1pr67k1u" path="res://assets/buttons/icons/pause.png" id="2_ibqyv"]
[ext_resource type="Texture2D" uid="uid://dggvaf5bgco0s" path="res://assets/buttons/icons/continue.png" id="3_q1rmq"]

[node name="PauseCameraButton" type="Button"]
offset_right = 159.0
offset_bottom = 157.0
theme = ExtResource("1_mka1q")
script = ExtResource("2_hqvul")

[node name="PauseTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -37.0
offset_right = 30.5
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ibqyv")

[node name="ContinueTexture" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -36.5
offset_right = 30.5
offset_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_q1rmq")

[connection signal="pressed" from="." to="." method="_on_pressed"]
